--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^1.3.7",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
@@ -18,7 +19,8 @@
     "react-hook-form": "^6.15.6",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
