--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@hookform/resolvers": "^1.3.7",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
+    "@mui/styles": "^5.14.16",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
